--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>earthquakes</title></head><link rel="stylesheet" type="text/css" href="/earthquakes.2388c9d5.css"><body>
-<script src="/src.499137c2.js"></script>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>earthquakes</title></head><link rel="stylesheet" type="text/css" href="https://doter1995.github.io/earthquakes/earthquakes.2388c9d5.css"><body>
+<script src="https://doter1995.github.io/earthquakes/src.499137c2.js"></script>
 <div id="root">
 </div></body></html>
