update the all sources by month use a point

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>earthquakes</title>
 </head>
 <link rel="stylesheet" type="text/css" href="./index.css">
+<script src="./public/libs/stats.min.js"></script>
 <body>
 <script src="./src/index.ts"></script>
 <div id="root"/>
