remove d3 and add 2d position

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>earthquakes</title>
 </head>
 <link rel="stylesheet" type="text/css" href="./index.css">
+<script src="https://cdn.bootcss.com/d3/5.9.2/d3.min.js"></script>
 <body>
 <div id="root"/>
 </body>
